# OxidOS

./: .gitignore  README.md
.github/workflows/: rust.yml
oxid-os/: Bootimage.toml  Cargo.toml
oxid-os/.cargo/: config.toml
oxid-os/src/: main.rs  serial.rs  vga_buffer.rs
oxid_os/: Cargo.toml
oxid_os/.cargo/: config.toml
oxid_os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
oxid_os/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
